Fix coach k quote photo stretch

--- a/app/assets/stylesheets/site/coach_k.css.sass
+++ b/app/assets/stylesheets/site/coach_k.css.sass
@@ -26,5 +26,11 @@
   $tooltip-pip-size: 10px
   padding: 12px 0px
   text-align: center
-  img
+  .img-container
+    width: 150px
+    height: 150px
+    overflow: hidden
+    margin: auto
     +border-radius(150px)
+    img
+      width: 100%
